Go back to dreamweaver, slight redesign

--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -1,77 +1,75 @@
 <!doctype html>
-<html lang="en">
+<html lang ="en"><!-- InstanceBegin template="/Templates/mainHeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- InstanceBeginEditable name="doctitle" -->
+		<title>D E Reyes / FishyFlop</title>
+		<!-- InstanceEndEditable -->
+		<!--libs-->
+		<!--jquery-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+		<!--typekit-->
+		<script src="https://use.typekit.net/ftq0ggh.js"></script>
+		<script>
+			try {
+				Typekit.load({
+					async: true
+				});
+			} catch (e) {}
 
-<head>
-  <base href="../" />
+		</script>
 
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Darin E. Reyes / Fishy Flop</title>
-  <!--libs-->
-  <!--jquery-->
-  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-  <!--typekit-->
-  <script src='https://use.typekit.net/ftq0ggh.js'></script>
-  <script>
-    try {
-      Typekit.load({
-        async: true
-      });
-    } catch (e) {}
+		<!--Favicon-->
+		<link rel="shortcut icon" href="../images/favicon.png" type="image/png" />
 
-  </script>
-  <!--Favicon-->
-  <link rel='shortcut icon' href='images/favicon.png' type='image/png' />
-  <!--Google analytics-->
-  <script>
-    console.log('analytics');
-    (function(i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-85708609-1', 'auto');
-    ga('send', 'pageview');
+		<!--Google analytics-->
+		<script>
+			console.log('analytics');
+			(function(i, s, o, g, r, a, m) {
+				i['GoogleAnalyticsObject'] = r;
+				i[r] = i[r] || function() {
+					(i[r].q = i[r].q || []).push(arguments)
+				}, i[r].l = 1 * new Date();
+				a = s.createElement(o),
+					m = s.getElementsByTagName(o)[0];
+				a.async = 1;
+				a.src = g;
+				m.parentNode.insertBefore(a, m)
+			})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+			ga('create', 'UA-85708609-1', 'auto');
+			ga('send', 'pageview');
 
-  </script>
-  <!--fontawesome-->
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+		</script>
+		<!--fontawesome-->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <!--css-->
-  <link rel='stylesheet' href='css/loading.css' />
-  <link rel='stylesheet' href='css/components.css' />
-  <link rel='stylesheet' href='css/typography.css' />
-  <link rel='stylesheet' href='css/utilities.css' />
-  <link rel='stylesheet' href='css/structure.css' />
-  <link rel='stylesheet' href='css/header.css' />
-</head>
-
-<body>
-
-  <section id='loading'>
-    <img src='images/loading.gif' alt='now loading'>
-  </section>
-  <div id="content">
-    <section class="tiles">
-
-      <div class='tileText col-100 row-auto p-b-0'>
-        <a href='index.html'>
-      <img src='images/catface.png' id='catface'>
-    </a>
-      </div>
-    </section>
-    <section class="tiles">
+		<!--css-->
+		<link rel="stylesheet" href="../css/loading.css" />
+		<link rel="stylesheet" href="../css/components.css" />
+		<link rel="stylesheet" href="../css/typography.css" />
+		<link rel="stylesheet" href="../css/utilities.css" />
+		<link rel="stylesheet" href="../css/structure.css" />
+		<link rel="stylesheet" href="../css/header.css" />
+  </head>
+  <body>
+		<section id="loading">
+  	  <img src="../images/loading.gif" alt="now loading">
+	  </section>
+		<div id="content">
+			<header>
+				<a href="../index.html">
+					<img src="../images/catface.png" id="catface" alt="Catface logo">
+				</a>
+			</header>
+	  
+			<!-- InstanceBeginEditable name="projectPage" -->
+			<section class="tiles">
       <div class="tileText col-100">
 
         <h1>Fishy Flop</h1>
         <p>UI and gameplay assets for a mobile game</p>
-        <img src='fishyflop/images/fishyFlopHero-large.gif'>
+        <img src='images/fishyFlopHero-large.gif'>
         <table>
           <tr>
             <td>
@@ -122,49 +120,47 @@
         </ul>
 
         <h2>Samples</h2>
-        <img src="fishyflop/images/7.jpg" alt="world 2 assets">
-        <img src="fishyflop/images/1.jpg" alt="world 1 assets">
-        <img src="fishyflop/images/2.jpg" alt="world 1 assets">
+        <img src="images/7.jpg" alt="world 2 assets">
+        <img src="images/1.jpg" alt="world 1 assets">
+        <img src="images/2.jpg" alt="world 1 assets">
         <i class="fa fa-caret-up" aria-hidden="true"></i>
         <p class="caption">Two styles were established to differentiate background and foreground elements.</p>
-        <img src="fishyflop/images/3.jpg" alt="ui assets">
-        <img src="fishyflop/images/5.jpg" alt="world 1 assets">
-        <img src="fishyflop/images/4.jpg" alt="world 2 assets">
-        <img src="fishyflop/images/6.jpg" alt="world 2 assets">
-        <img src="fishyflop/images/8.jpg" alt="world 2 assets">
-        <img src="fishyflop/images/9.jpg" alt="world 2 assets">
-        <img src="fishyflop/images/10.jpg" alt="world 2 assets">
+        <img src="images/3.jpg" alt="ui assets">
+        <img src="images/5.jpg" alt="world 1 assets">
+        <img src="images/4.jpg" alt="world 2 assets">
+        <img src="images/6.jpg" alt="world 2 assets">
+        <img src="images/8.jpg" alt="world 2 assets">
+        <img src="images/9.jpg" alt="world 2 assets">
+        <img src="images/10.jpg" alt="world 2 assets">
         <i class="fa fa-caret-up" aria-hidden="true"></i>
         <p class="caption">Many elements were designed to be seamlessly tiled.</p>
       </div>
       <div class="tileText col-100 row-auto">
-        <a class='button' href='arirang/index.html'>Previous project: Arirang Visualization</a> <a class='button' href='breathe/index.html'>Next project: Breathe California Rebranding</a> </div>
+        <a class='button' href='../arirang/index.html'>Previous project: Arirang Visualization</a> <a class='button' href='../breathe/index.html'>Next project: Breathe California Rebranding</a> </div>
     </section>
-    <section class="tiles">
-
-      <div class="tileText col-100 row-auto p-t-0">
-        <p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
-
-        <a class="button button-pink" href="index.html">Work</a>
-
-        <a class="button button-green" href="about/index.html">About</a>
-
-        <a class="button button-cyan" href="contact/index.html">Contact</a>
-
-        <a class="button" href="https://www.facebook.com/dereyesdesign">
-      <i class="fa fa-facebook-official"></i>
-    </a>
-
-        <a class="button" href="https://www.instagram.com/dereyesdesign/">
-      <i class="fa fa-instagram"></i>
-    </a>
-
-        <a class="button" href="https://twitter.com/dereyesdesign">
-      <i class="fa fa-twitter"></i>
-    </a>
-      </div>
-    </section>
-  </div>
-</body>
-
-</html>
+			<!-- InstanceEndEditable -->
+			<section class="tiles">
+      	<div class="tileText col-100 row-auto p-t-0">
+        	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+					<p>
+						<a href="../index.html">Work</a>
+						<a href="../about/index.html">About</a>
+						<a href="../contact/index.html">Contact</a>
+						<a href="https://www.facebook.com/dereyesdesign">
+							<i class="fa fa-facebook-official"></i>
+						</a>
+						<a href="https://www.instagram.com/dereyesdesign/">
+							<i class="fa fa-instagram"></i> 
+						</a>
+						<a href="https://twitter.com/dereyesdesign">
+							<i class="fa fa-twitter"></i> 
+						</a>
+					</p>
+      	</div>
+    	</section>
+			<!-- InstanceBeginEditable name="homePage" -->
+			<!-- InstanceEndEditable -->
+		
+		</div>
+	</body>
+<!-- InstanceEnd --></html>
