--- a/index.html
+++ b/index.html
@@ -1,197 +1,183 @@
 <!doctype html>
-<html lang="en">
+<html lang ="en"><!-- InstanceBegin template="/Templates/mainHeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- InstanceBeginEditable name="doctitle" -->
+		<title>D E Reyes / Home</title>
+		<!-- InstanceEndEditable -->
+		<!--libs-->
+		<!--jquery-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<head>
-  <base href="" />
+		<!--typekit-->
+		<script src="https://use.typekit.net/ftq0ggh.js"></script>
+		<script>
+			try {
+				Typekit.load({
+					async: true
+				});
+			} catch (e) {}
 
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Darin E. Reyes / Home</title>
-  <!--libs-->
-  <!--jquery-->
-  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-  <!--typekit-->
-  <script src='https://use.typekit.net/ftq0ggh.js'></script>
-  <script>
-    try {
-      Typekit.load({
-        async: true
-      });
-    } catch (e) {}
+		</script>
 
-  </script>
-  <!--Favicon-->
-  <link rel='shortcut icon' href='images/favicon.png' type='image/png' />
-  <!--Google analytics-->
-  <script>
-    console.log('analytics');
-    (function(i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-85708609-1', 'auto');
-    ga('send', 'pageview');
+		<!--Favicon-->
+		<link rel="shortcut icon" href="images/favicon.png" type="image/png" />
 
-  </script>
-  <!--fontawesome-->
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+		<!--Google analytics-->
+		<script>
+			console.log('analytics');
+			(function(i, s, o, g, r, a, m) {
+				i['GoogleAnalyticsObject'] = r;
+				i[r] = i[r] || function() {
+					(i[r].q = i[r].q || []).push(arguments)
+				}, i[r].l = 1 * new Date();
+				a = s.createElement(o),
+					m = s.getElementsByTagName(o)[0];
+				a.async = 1;
+				a.src = g;
+				m.parentNode.insertBefore(a, m)
+			})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+			ga('create', 'UA-85708609-1', 'auto');
+			ga('send', 'pageview');
 
-  <!--css-->
-  <link rel='stylesheet' href='css/loading.css' />
-  <link rel='stylesheet' href='css/components.css' />
-  <link rel='stylesheet' href='css/typography.css' />
-  <link rel='stylesheet' href='css/utilities.css' />
-  <link rel='stylesheet' href='css/structure.css' />
-  <link rel='stylesheet' href='css/header.css' />
-</head>
+		</script>
+		<!--fontawesome-->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<body>
-
-  <section id='loading'>
-    <img src='images/loading.gif' alt='now loading'>
-  </section>
-  <div id="content">
-    <section class="tiles">
-        <div class="tileText col-100">
-            <div class='video video-16x9'><iframe src='https://player.vimeo.com/video/278603739' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-        </div>
-      <div class='tileText col-100 row-auto p-b-0'>
-        <a href='index.html'>
-      <img src='images/catface.png' id='catface'>
-    </a>
-      </div>
-
-      <div class="tileText col-100 row-auto p-t-0">
-        <p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
-
-        <a class="button button-pink" href="index.html">Work</a>
-
-        <a class="button button-green" href="about/index.html">About</a>
-
-        <a class="button button-cyan" href="contact/index.html">Contact</a>
-
-        <a class="button" href="https://www.facebook.com/dereyesdesign">
-      <i class="fa fa-facebook-official"></i>
-    </a>
-
-        <a class="button" href="https://www.instagram.com/dereyesdesign/">
-      <i class="fa fa-instagram"></i>
-    </a>
-
-        <a class="button" href="https://twitter.com/dereyesdesign">
-      <i class="fa fa-twitter"></i>
-    </a>
-      </div>
-    </section>
-    <section class="tiles">
-      <div class="tileTitle">
-        <h1>Latest<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
-      </div>
-
-      <a id='gato' class='tileProject' style='
-        background:url("gato/images/gatoHero.gif");
-        background-position: center;
-        background-size: cover;
-      ' href='gato/index.html'>
-        <div class='tileProjectInfo'>
-          <h2>Gato</h2>
-          <p>Interactive installation for babies, children, and their caretakers</p>
-        </div>
-      </a>
-      <a class="tileBigText col-lg-2" style="background:url('gato/images/gatoVideoPreview.gif');background-position:center;" href="https://vimeo.com/243570108">
-        <div class="tileBigTextInfo">
-          <h1>Watch the mini-doc on Vimeo</h1>
-        </div>
-      </a>
-    </section>
-<!--
-    <section class="tiles">
-      <div class="tileTitle">
-        <h1>Upcoming <i class="fa fa-caret-down" aria-hidden="true"></i></h1>
-      </div>
-      <div class="tileText">
-        <p>5/5<br>Interactive installation<br>w/ Respect the Funk<br>Shabang music festival,<br>San Luis Obispo, CA</p>
-        <a class="button" href="https://www.shabangslo.com/">Tickets</a>
-      </div>
-    </section>
--->
-    <section class="tiles">
-      <div class="tileTitle">
-        <h1>2017<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
-      </div>
-
-      <a id='breathe' class='tileProject' style='
-        background:url("breathe/images/breatheHero.jpg");
-        background-position: center;
-        background-size: cover;
-      ' href='breathe/index.html'>
-        <div class='tileProjectInfo'>
-          <h2>Breathe California Rebranding</h2>
-          <p>Marketing materials for a local non-profit</p>
-        </div>
-      </a>
-    </section>
-    <section class="tiles">
-      <div class="tileTitle">
-        <h1>2016<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
-      </div>
-
-      <a id='fishyflop' class='tileProject' style='
-        background:url("fishyflop/images/fishyFlopHero.gif");
-        background-position: center;
-        background-size: cover;
-      ' href='fishyflop/index.html'>
-        <div class='tileProjectInfo'>
-          <h2>Fishy Flop</h2>
-          <p>UI and gameplay assets for a mobile game</p>
-        </div>
-      </a>
-
-      <a id='arirang' class='tileProject' style='
-        background:url("arirang/images/heroArirang.gif");
-        background-position: center;
-        background-size: cover;
-      ' href='arirang/index.html'>
-        <div class='tileProjectInfo'>
-          <h2>Arirang Visualization</h2>
-          <p>Live interactive concert visuals</p>
-        </div>
-      </a>
-
-      <a id='disquiet' class='tileProject' style='
-        background:url("disquiet/images/heroDisQuiet.gif");
-        background-position: center;
-        background-size: cover;
-      ' href='disquiet/index.html'>
-        <div class='tileProjectInfo'>
-          <h2>DisQuiet Prototype</h2>
-          <p>Musical relaxation app for depression and anxiety</p>
-        </div>
-      </a>
-    </section>
-    <section class="tiles">
-      <div class="tileTitle">
-        <h1>2015<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
-      </div>
-
-      <a id='audiovisuals' class='tileProject' style='
-        background:url("audiovisuals/images/heroAudioVisuals.gif");
-        background-position: center;
-        background-size: cover;
-      ' href='audiovisuals/index.html'>
-        <div class='tileProjectInfo'>
-          <h2>AudioVisuals</h2>
-          <p>Music visualizer</p>
-        </div>
-      </a>
-    </section>
-  </div>
-</body>
-
-</html>
+		<!--css-->
+		<link rel="stylesheet" href="css/loading.css" />
+		<link rel="stylesheet" href="css/components.css" />
+		<link rel="stylesheet" href="css/typography.css" />
+		<link rel="stylesheet" href="css/utilities.css" />
+		<link rel="stylesheet" href="css/structure.css" />
+		<link rel="stylesheet" href="css/header.css" />
+  </head>
+  <body>
+		<section id="loading">
+  	  <img src="images/loading.gif" alt="now loading">
+	  </section>
+		<div id="content">
+			<header>
+				<a href="index.html">
+					<img src="images/catface.png" id="catface" alt="Catface logo">
+				</a>
+			</header>
+	  
+			<!-- InstanceBeginEditable name="projectPage" -->
+			<section class="tiles">
+				<div class="tileText col-100">
+					<div class='video video-16x9'>
+						<iframe src='https://player.vimeo.com/video/278603739' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					</div>
+				</div>
+			</section>
+			<!-- InstanceEndEditable -->
+			<section class="tiles">
+      	<div class="tileText col-100 row-auto p-t-0">
+        	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+					<p>
+						<a href="index.html">Work</a>
+						<a href="about/index.html">About</a>
+						<a href="contact/index.html">Contact</a>
+						<a href="https://www.facebook.com/dereyesdesign">
+							<i class="fa fa-facebook-official"></i>
+						</a>
+						<a href="https://www.instagram.com/dereyesdesign/">
+							<i class="fa fa-instagram"></i> 
+						</a>
+						<a href="https://twitter.com/dereyesdesign">
+							<i class="fa fa-twitter"></i> 
+						</a>
+					</p>
+      	</div>
+    	</section>
+			<!-- InstanceBeginEditable name="homePage" -->
+			<section class="tiles">
+				<div class="tileTitle">
+					<h1>Latest<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
+				</div>
+				<a id="gato" class="tileProject" style="
+					background:url('gato/images/gatoHero.gif');
+					background-position: center;
+					background-size: cover;"
+					href="gato/index.html">
+					<div class="tileProjectInfo">
+						<h2>Gato</h2>
+						<p>Interactive installation for babies, children, and their caretakers</p>
+					</div>
+				</a>
+				<a class="tileBigText col-lg-2" style="background:url('gato/images/gatoVideoPreview.gif');background-position:center;" href="https://vimeo.com/243570108">
+					<div class="tileBigTextInfo">
+						<h1>Watch the mini-doc on Vimeo</h1>
+					</div>
+				</a>
+			</section>
+			<section class="tiles">
+				<div class="tileTitle">
+					<h1>2017<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
+				</div>
+				<a id="breathe" class="tileProject" style="
+					background:url('breathe/images/breatheHero.jpg');
+					background-position: center;
+					background-size: cover;"
+					href="breathe/index.html">
+					<div class="tileProjectInfo">
+						<h2>Breathe California Rebranding</h2>
+						<p>Marketing materials for a local non-profit</p>
+					</div>
+				</a>
+   		</section>
+			<section class="tiles">
+      	<div class="tileTitle">
+        	<h1>2016<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
+      	</div>
+      	<a id="fishyflop" class="tileProject" style="
+        	background:url('fishyflop/images/fishyFlopHero.gif');
+        	background-position: center;
+        	background-size: cover;"
+					href="fishyflop/index.html">
+					<div class="tileProjectInfo">
+						<h2>Fishy Flop</h2>
+						<p>UI and gameplay assets for a mobile game</p>
+					</div>
+				</a>
+				<a id="arirang" class="tileProject" style="
+					background:url('arirang/images/heroArirang.gif');
+					background-position: center;
+					background-size: cover;"
+					href="arirang/index.html">
+					<div class="tileProjectInfo">
+						<h2>Arirang Visualization</h2>
+						<p>Live interactive concert visuals</p>
+					</div>
+				</a>
+				<a id="disquiet" class="tileProject" style="
+					background:url('disquiet/images/heroDisQuiet.gif');
+					background-position: center;
+					background-size: cover;"
+					href="disquiet/index.html">
+					<div class="tileProjectInfo">
+						<h2>DisQuiet Prototype</h2>
+						<p>Musical relaxation app for depression and anxiety</p>
+					</div>
+				</a>
+    	</section>
+			<section class="tiles">
+				<div class="tileTitle">
+					<h1>2015<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
+				</div>
+				<a id="audiovisuals" class="tileProject" style="
+					background:url('audiovisuals/images/heroAudioVisuals.gif');
+					background-position: center;
+					background-size: cover;" href="audiovisuals/index.html">
+					<div class="tileProjectInfo">
+						<h2>AudioVisuals</h2>
+						<p>Music visualizer</p>
+					</div>
+				</a>
+			</section>
+			<!-- InstanceEndEditable -->
+		
+		</div>
+	</body>
+<!-- InstanceEnd --></html>
