--- a/gato/index.html
+++ b/gato/index.html
@@ -1,156 +1,131 @@
 <!doctype html>
-<html lang="en">
+<html lang ="en"><!-- InstanceBegin template="/Templates/mainHeaderFooter.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- InstanceBeginEditable name="doctitle" -->
+		<title>D E Reyes / Gato</title>
+		<!-- InstanceEndEditable -->
+		<!--libs-->
+		<!--jquery-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+		<!--typekit-->
+		<script src="https://use.typekit.net/ftq0ggh.js"></script>
+		<script>
+			try {
+				Typekit.load({
+					async: true
+				});
+			} catch (e) {}
 
-<head>
-  <base href="../" />
+		</script>
 
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Darin E. Reyes / Gato</title>
-  <!--libs-->
-  <!--jquery-->
-  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-  <!--typekit-->
-  <script src='https://use.typekit.net/ftq0ggh.js'></script>
-  <script>
-    try {
-      Typekit.load({
-        async: true
-      });
-    } catch (e) {}
+		<!--Favicon-->
+		<link rel="shortcut icon" href="../images/favicon.png" type="image/png" />
 
-  </script>
-  <!--Favicon-->
-  <link rel='shortcut icon' href='images/favicon.png' type='image/png' />
-  <!--Google analytics-->
-  <script>
-    console.log('analytics');
-    (function(i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-85708609-1', 'auto');
-    ga('send', 'pageview');
+		<!--Google analytics-->
+		<script>
+			console.log('analytics');
+			(function(i, s, o, g, r, a, m) {
+				i['GoogleAnalyticsObject'] = r;
+				i[r] = i[r] || function() {
+					(i[r].q = i[r].q || []).push(arguments)
+				}, i[r].l = 1 * new Date();
+				a = s.createElement(o),
+					m = s.getElementsByTagName(o)[0];
+				a.async = 1;
+				a.src = g;
+				m.parentNode.insertBefore(a, m)
+			})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+			ga('create', 'UA-85708609-1', 'auto');
+			ga('send', 'pageview');
 
-  </script>
-  <!--fontawesome-->
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+		</script>
+		<!--fontawesome-->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <!--css-->
-  <link rel='stylesheet' href='css/loading.css' />
-  <link rel='stylesheet' href='css/components.css' />
-  <link rel='stylesheet' href='css/typography.css' />
-  <link rel='stylesheet' href='css/utilities.css' />
-  <link rel='stylesheet' href='css/structure.css' />
-  <link rel='stylesheet' href='css/header.css' />
-</head>
-
-<body>
-
-  <section id='loading'>
-    <img src='images/loading.gif' alt='now loading'>
-  </section>
-  <div id="content">
-    <section class="tiles">
-
-      <div class='tileText col-100 row-auto p-b-0'>
-        <a href='index.html'>
-      <img src='images/catface.png' id='catface'>
-    </a>
-      </div>
-    </section>
-    <section class="tiles">
-      <div class="tileText col-100">
-
-        <h1>Gato</h1>
-        <p>Interactive installation for babies, children, and their caretakers</p>
-        <div class='video video-16x9'><iframe src='https://player.vimeo.com/video/243570108' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-        <table>
-          <tr>
-            <td>
-              <h3>Client</h3>
-            </td>
-            <td>
-              <p>Crocker Art Museum</p>
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              <h3>Role</h3>
-            </td>
-            <td>
-              <p>Audio Designer, Coder, Visual Designer, in collaboration with Michelle Lee</p>
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              <h3>Tools</h3>
-            </td>
-            <td>
-              <p>Ableton Live, Adobe Illustrator, Processing, Unity C#, XBox Kinect</p>
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              <h3>Status</h3>
-            </td>
-            <td>
-              <p>Exhibited at the Crocker Art Museum from May 2017 to October 2017</p>
-            </td>
-          </tr>
-        </table>
-        <h2>Concept</h2>
-        <p>The purpose of the grant was to create art that could help make babies and children school-ready. I designed a multi-layered experience that engaged the developing senses of babies, the playfulness of children, and the emotional development of their caretakers.</p>
-        <p>The piece features a 20-foot stuffed cat, motion-reactive projected visuals, and music that changes depending on a visitor's position in the space.</p>
-        <h2>Process</h2>
-        <img src="gato/images/Sequence01_2.gif" alt="Kinect depth vision proof-of-concept">
-        <i class="fa fa-caret-up" aria-hidden="true"></i>
-        <p class="caption">Using the XBox Kinect to create motion-reactive visuals in the Unity game engine</p>
-        <img src="gato/images/20170515_162042(0).jpg" alt="kinect vision">
-        <p>The giant cat was inspired by the work of childhood psychologist DW Winnicott. He theorised that our childhood relationships to soft toys deepen our relationships to reality and ourselves, and prepare us to be emotionally mature adults.</p>
-        <p>It is meant to remind adults of what it was like to be small, and to have a stuffed companion. Young visitors have enjoyed climbing over the cat and cuddling with it while watching the projection. Some children have spent over an hour with the cat.</p>
-        <img src="gato/images/gatoHero.gif" alt="projection imagery">
-        <i class="fa fa-caret-up" aria-hidden="true"></i>
-        <p class="caption">Imagery in the projection tells the story of twenty-something reconnecting with their childhood selves.</p>
-      </div>
-      <div class="tileText col-100 row-auto">
-        <a class='button' href='breathe/index.html'>Previous project: Breathe California Rebranding</a> </div>
-    </section>
-    <section class="tiles">
-
-      <div class="tileText col-100 row-auto p-t-0">
-        <p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
-
-        <a class="button button-pink" href="index.html">Work</a>
-
-        <a class="button button-green" href="about/index.html">About</a>
-
-        <a class="button button-cyan" href="contact/index.html">Contact</a>
-
-        <a class="button" href="https://www.facebook.com/dereyesdesign">
-      <i class="fa fa-facebook-official"></i>
-    </a>
-
-        <a class="button" href="https://www.instagram.com/dereyesdesign/">
-      <i class="fa fa-instagram"></i>
-    </a>
-
-        <a class="button" href="https://twitter.com/dereyesdesign">
-      <i class="fa fa-twitter"></i>
-    </a>
-      </div>
-    </section>
-  </div>
-</body>
-
-</html>
+		<!--css-->
+		<link rel="stylesheet" href="../css/loading.css" />
+		<link rel="stylesheet" href="../css/components.css" />
+		<link rel="stylesheet" href="../css/typography.css" />
+		<link rel="stylesheet" href="../css/utilities.css" />
+		<link rel="stylesheet" href="../css/structure.css" />
+		<link rel="stylesheet" href="../css/header.css" />
+  </head>
+  <body>
+		<section id="loading">
+  	  <img src="../images/loading.gif" alt="now loading">
+	  </section>
+		<div id="content">
+			<header>
+				<a href="../index.html">
+					<img src="../images/catface.png" id="catface" alt="Catface logo">
+				</a>
+			</header>
+	  
+			<!-- InstanceBeginEditable name="projectPage" -->
+			<section class="tiles">
+				<div class="tileText col-100">
+					<h1>Gato</h1>
+					<p>Interactive installation for babies, children, and their caretakers</p>
+					<div class='video video-16x9'>
+						<iframe src='https://player.vimeo.com/video/243570108' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					</div>
+					<table>
+						<tr>
+							<td><h3>Client</h3></td>
+							<td><p>Crocker Art Museum</p></td>
+						</tr>
+						<tr>
+							<td><h3>Role</h3></td>
+							<td><p>Audio Designer, Coder, Visual Designer, in collaboration with Michelle Lee</p></td>
+						</tr>
+						<tr>
+							<td><h3>Tools</h3></td>
+							<td><p>Ableton Live, Adobe Illustrator, Processing, Unity C#, XBox Kinect</p></td>
+						</tr>
+						<tr>
+							<td><h3>Status</h3></td>
+							<td><p>Exhibited at the Crocker Art Museum from May 2017 to October 2017</p></td>
+						</tr>
+					</table>
+					<h2>Concept</h2>
+					<p>The purpose of the grant was to create art that could help make babies and children school-ready. I designed a multi-layered experience that engaged the developing senses of babies, the playfulness of children, and the emotional development of their caretakers.</p>
+					<p>The piece features a 20-foot stuffed cat, motion-reactive projected visuals, and music that changes depending on a visitor's position in the space.</p>
+					<h2>Process</h2>
+					<img src="images/Sequence01_2.gif" alt="Kinect depth vision proof-of-concept"> <i class="fa fa-caret-up" aria-hidden="true"></i>
+					<p class="caption">Using the XBox Kinect to create motion-reactive visuals in the Unity game engine</p>
+					<img src="images/20170515_162042(0).jpg" alt="kinect vision">
+					<p>The giant cat was inspired by the work of childhood psychologist DW Winnicott. He theorised that our childhood relationships to soft toys deepen our relationships to reality and ourselves, and prepare us to be emotionally mature adults.</p>
+					<p>It is meant to remind adults of what it was like to be small, and to have a stuffed companion. Young visitors have enjoyed climbing over the cat and cuddling with it while watching the projection. Some children have spent over an hour with the cat.</p>
+					<img src="images/gatoHero.gif" alt="projection imagery"> <i class="fa fa-caret-up" aria-hidden="true"></i>
+					<p class="caption">Imagery in the projection tells the story of twenty-something reconnecting with their childhood selves.</p>
+				</div>
+				<div class="tileText col-100 row-auto"> <a class='button' href='../breathe/index.html'>Previous project: Breathe California Rebranding</a> </div>
+			</section>
+			<!-- InstanceEndEditable -->
+			<section class="tiles">
+      	<div class="tileText col-100 row-auto p-t-0">
+        	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+					<p>
+						<a href="../index.html">Work</a>
+						<a href="../about/index.html">About</a>
+						<a href="../contact/index.html">Contact</a>
+						<a href="https://www.facebook.com/dereyesdesign">
+							<i class="fa fa-facebook-official"></i>
+						</a>
+						<a href="https://www.instagram.com/dereyesdesign/">
+							<i class="fa fa-instagram"></i> 
+						</a>
+						<a href="https://twitter.com/dereyesdesign">
+							<i class="fa fa-twitter"></i> 
+						</a>
+					</p>
+      	</div>
+    	</section>
+			<!-- InstanceBeginEditable name="homePage" -->
+			<!-- InstanceEndEditable -->
+		
+		</div>
+	</body>
+<!-- InstanceEnd --></html>
