Fix titles, add shadowplay page

--- a/audiovisuals/index.html
+++ b/audiovisuals/index.html
@@ -3,7 +3,7 @@
   <head>
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- InstanceBeginEditable name="doctitle" -->
-		AudioVisuals
+		<title>D E Reyes / AudioVisuals</title>
 		<!-- InstanceEndEditable -->
 		<!--libs-->
 		<!--jquery-->
