--- a/index.html
+++ b/index.html
@@ -64,13 +64,6 @@
 			</header>
 	  
 			<!-- InstanceBeginEditable name="projectPage" -->
-			<section class="tiles">
-				<div class="tileText col-100">
-					<div class='video video-16x9'>
-						<iframe src='https://player.vimeo.com/video/278603739' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-					</div>
-				</div>
-			</section>
 			<!-- InstanceEndEditable -->
 			<section class="tiles">
       	<div class="tileText col-100 row-auto p-t-0">
@@ -96,6 +89,21 @@
 				<div class="tileTitle">
 					<h1>Latest<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
 				</div>
+				<a id="shadowplay" class="tileProject" style="
+					background:url('shadowplay/images/preview.png');
+					background-position: center;
+					background-size: cover;"
+					href="shadowplay/index.html">
+					<div class="tileProjectInfo">
+						<h2>ShadowPlay</h2>
+						<p>Interactive dance floor</p>
+					</div>
+				</a>
+			</section>
+			<section class="tiles">
+				<div class="tileTitle">
+					<h1>2017<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
+				</div>
 				<a id="gato" class="tileProject" style="
 					background:url('gato/images/gatoHero.gif');
 					background-position: center;
@@ -111,11 +119,6 @@
 						<h1>Watch the mini-doc on Vimeo</h1>
 					</div>
 				</a>
-			</section>
-			<section class="tiles">
-				<div class="tileTitle">
-					<h1>2017<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
-				</div>
 				<a id="breathe" class="tileProject" style="
 					background:url('breathe/images/breatheHero.jpg');
 					background-position: center;
