--- a/breathe/index.html
+++ b/breathe/index.html
@@ -3,7 +3,7 @@
   <head>
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- InstanceBeginEditable name="doctitle" -->
-		Breathe California Rebranding
+		<title>D E Reyes / Breathe California Rebranding</title>
 		<!-- InstanceEndEditable -->
 		<!--libs-->
 		<!--jquery-->
