--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
   <head>
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- InstanceBeginEditable name="doctitle" -->
-		Contact
+		<title>D E Reyes / Contact</title>
 		<!-- InstanceEndEditable -->
 		<!--libs-->
 		<!--jquery-->
