Finish shadowplay page

--- a/shadowplay/index.html
+++ b/shadowplay/index.html
@@ -68,7 +68,7 @@
 				<div class="tileText col-100">
 					<h1>ShadowPlay</h1>
 					<p>Interactive dance floor</p>
-					<img src="images/hero.png" alt="Photo from the show">
+					<img src="images/hero.gif" alt="Photo from the show">
 					<table>
 						<tr>
 							<td><h3>Client</h3></td>
