--- a/disquiet/index.html
+++ b/disquiet/index.html
@@ -115,7 +115,7 @@
 				<div class="tileText col-100 row-auto"> <a class='button' href='../audiovisuals/index.html'>Previous project: AudioVisuals</a> <a class='button' href='../arirang/index.html'>Next project: Arirang Visualization</a> </div>
 			</section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles">
+			<section class="tiles b-t-0">
       	<div class="tileText col-100 row-auto p-t-0">
         	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
