--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -139,7 +139,7 @@
         <a class='button' href='../arirang/index.html'>Previous project: Arirang Visualization</a> <a class='button' href='../breathe/index.html'>Next project: Breathe California Rebranding</a> </div>
     </section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles">
+			<section class="tiles b-t-0">
       	<div class="tileText col-100 row-auto p-t-0">
         	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
