--- a/gato/index.html
+++ b/gato/index.html
@@ -101,10 +101,10 @@
 					<img src="images/gatoHero.gif" alt="projection imagery"> <i class="fa fa-caret-up" aria-hidden="true"></i>
 					<p class="caption">Imagery in the projection tells the story of twenty-something reconnecting with their childhood selves.</p>
 				</div>
-				<div class="tileText col-100 row-auto"> <a class='button' href='../breathe/index.html'>Previous project: Breathe California Rebranding</a> </div>
+				<div class="tileText col-100 row-auto"> <a class='button' href='../breathe/index.html'>Previous project: Breathe California Rebranding</a> <a class='button' href='../shadowplay/index.html'>Next project: ShadowPlay</a></div>
 			</section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles">
+			<section class="tiles b-t-0">
       	<div class="tileText col-100 row-auto p-t-0">
         	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
