--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	  
 			<!-- InstanceBeginEditable name="projectPage" -->
 			<!-- InstanceEndEditable -->
-			<section class="tiles">
+			<section class="tiles b-t-0">
       	<div class="tileText col-100 row-auto p-t-0">
         	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
@@ -90,7 +90,7 @@
 					<h1>Latest<br><i class="fa fa-caret-down" aria-hidden="true"></i></h1>
 				</div>
 				<a id="shadowplay" class="tileProject" style="
-					background:url('shadowplay/images/preview.png');
+					background:url('shadowplay/images/hero.gif');
 					background-position: center;
 					background-size: cover;"
 					href="shadowplay/index.html">
