--- a/shadowplay/index.html
+++ b/shadowplay/index.html
@@ -101,7 +101,7 @@
 				<div class="tileText col-100 row-auto"> <a class='button' href='../gato/index.html'>Previous project: Gato</a> </div>
 			</section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles">
+			<section class="tiles b-t-0">
       	<div class="tileText col-100 row-auto p-t-0">
         	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
