--- a/about/index.html
+++ b/about/index.html
@@ -134,7 +134,7 @@
 				</div>
 			</section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles">
+			<section class="tiles b-t-0">
       	<div class="tileText col-100 row-auto p-t-0">
         	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
