--- a/arirang/index.html
+++ b/arirang/index.html
@@ -103,7 +103,7 @@
 				<div class="tileText col-100 row-auto"> <a class='button' href='../disquiet/index.html'>Previous project: DisQuiet Prototype</a> <a class='button' href='../fishyflop/index.html'>Next project: Fishy Flop</a> </div>
 			</section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles">
+			<section class="tiles b-t-0">
       	<div class="tileText col-100 row-auto p-t-0">
         	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
