--- a/breathe/index.html
+++ b/breathe/index.html
@@ -124,7 +124,7 @@
 				<div class="tileText col-100 row-auto"> <a class='button' href='../fishyflop/index.html'>Previous project: Fishy Flop</a> <a class='button' href='../gato/index.html'>Next project: Gato</a> </div>
 			</section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles">
+			<section class="tiles b-t-0">
       	<div class="tileText col-100 row-auto p-t-0">
         	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
