Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -75,15 +75,15 @@
 						</tr>
 						<tr>
 							<td><strong>May</strong></td>
-							<td><p>Presented interactive dance floor “ShadowPlay” at Shabang Music Festival with Respect the Funk</p></td>
+							<td><p>Presented interactive dance floor <a href="../shadowplay/index.html">“ShadowPlay”</a> at Shabang Music Festival with Respect the Funk</p></td>
 						</tr>
 						<tr>
 							<td><strong>Apr</strong></td>
-							<td><p>Presented interactive dance floor “ShadowPlay” at Crocker Art Museum with The Hot Baked Goods</p></td>
+							<td><p>Presented interactive dance floor <a href="../shadowplay/index.html">“ShadowPlay”</a> at Crocker Art Museum with The Hot Baked Goods</p></td>
 						</tr>
 						<tr>
 							<td><strong>Mar</strong></td>
-							<td><p>Concert visualization at the Sophia Center for the Arts with Joe Kye</p></td>
+							<td><p><a href="../arirang/index.html">Concert visualization</a> at the Sophia Center for the Arts with Joe Kye</p></td>
 						</tr>
 					</table>
 					<table>
@@ -92,7 +92,7 @@
 						</tr>
 						<tr>
 							<td><strong>Dec</strong></td>
-							<td><p>Concert visualization at #Migrants album release show with Joe Kye</p></td>
+							<td><p><a href="../arirang/index.html">Concert visualization</a> at #Migrants album release show with Joe Kye</p></td>
 						</tr>
 						<tr>
 							<td><strong>Oct</strong></td>
@@ -109,7 +109,7 @@
 						</tr>
 						<tr>
 							<td><strong>Oct</strong></td>
-							<td><p>Concert visualization at CLARA with Joe Kye</p></td>
+							<td><p><a href="../arirang/index.html">Concert visualization</a> at CLARA with Joe Kye</p></td>
 						</tr>
 						<tr>
 							<td><strong>Aug</strong></td>
