Update about section

--- a/about/index.html
+++ b/about/index.html
@@ -67,8 +67,10 @@
 			<section class="tiles">
 				<div class="tileText col-100">
 					<h1>About</h1>
-					<p>Darin was born in Los Angeles, California. He graduated from Los Angeles Mission College with an AA in Art in 2014 and graduated from UC Davis with a BA in Design in 2016.</p>
+					<p>Darin was born in Los Angeles, California. He graduated from UC Davis with a BA in Design in 2016.</p>
+					<p>Darin uses light and code to create immersive interactive experiences. At times, he aims to move people further along the path of vital developmental experiences. At times, he simply aims to create moments of delight.</p>
 					<p>He has been recognized for his <a href="https://2018.sfdesignweek.org/2016-enrichment-scholarship-winners/">“clean, smart design solutions with well-researched foundations”, “ability to transform personal stories into useful tools”</a>, and <a href="http://www.ladancechronicle.com/joe-kye-ching-ching-wong-launch-their-international-tour-at-navel-la/"> “visual magic”.</a></p>
+					<p>His work has been presented at the International Symposium on Electronic Art, Hong Kong Polytechnic University, the Crocker Art Museum, and more.</p>
 					<table>
 						<tr>
 							<td rowspan="4"><h3>2018</h3></td>
