Add favorite color to form

--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,11 @@
 		<link rel="stylesheet" href="../css/utilities.css" />
 		<link rel="stylesheet" href="../css/structure.css" />
 		<link rel="stylesheet" href="../css/header.css" />
-  </head>
+		
+		<!-- InstanceBeginEditable name="ExtraLibs" -->
+		<!-- InstanceEndEditable -->
+		
+</head>
   <body>
 		<section id="loading">
   	  <img src="../images/loading.gif" alt="now loading">
@@ -107,11 +111,19 @@
 					</table>
 					<table>
 						<tr>
-							<td rowspan="8"><h3>2016</h3></td>
+							<td rowspan="9"><h3>2016</h3></td>
+						</tr>
+						<tr>
+							<td><strong>Nov</strong></td>
+							<td><p>Guest lecturer on Speculative Design at the UC Davis</p></td>
 						</tr>
 						<tr>
 							<td><strong>Oct</strong></td>
 							<td><p><a href="../arirang/index.html">Concert visualization</a> at CLARA with Joe Kye</p></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td><p>Guest lecturer on Speculative Design at the UC Davis</p></td>
 						</tr>
 						<tr>
 							<td><strong>Aug</strong></td>
