--- a/contact/index.html
+++ b/contact/index.html
@@ -51,7 +51,11 @@
 		<link rel="stylesheet" href="../css/utilities.css" />
 		<link rel="stylesheet" href="../css/structure.css" />
 		<link rel="stylesheet" href="../css/header.css" />
-  </head>
+		
+		<!-- InstanceBeginEditable name="ExtraLibs" -->
+		<!-- InstanceEndEditable -->
+		
+</head>
   <body>
 		<section id="loading">
   	  <img src="../images/loading.gif" alt="now loading">
@@ -73,13 +77,13 @@
 								<td><label for="name">
 									<h3>Name</h3>
 									</label></td>
-								<td><input id="name" name="name"></td>
+								<td><input id="name" name="name" required=""></td>
 							</tr>
 							<tr>
 								<td><label for="message">
 									<h3>Message</h3>
 									</label></td>
-								<td><textarea id="message" name="message" rows="6"></textarea></td>
+								<td><textarea id="message" name="message" rows="6" required=""></textarea></td>
 							</tr>
 							<tr>
 								<td><label for="email">
@@ -87,6 +91,12 @@
 									</label></td>
 								<td><input id="email" name="email" type="email" value="" required="">
 									<span id="email-invalid" style="visibility:hidden"> Must be a valid email address</span></td>
+							</tr>
+							<tr>
+								<td><label for="color">
+									<h3>Favorite color</h3>
+									</label></td>
+								<td><input id="color" name="color" required=""></td>
 							</tr>
 							<tr>
 								<td colspan="2"><button>Send</button></td>
@@ -100,6 +110,19 @@
 				<!-- submit the form using AJAX --> 
 				<script data-cfasync="false" type="text/javascript" src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script> 
 			</section>
+			
+			<script nonce="J/SCqMILnbFOHjZX8Oc/VetMLP8">
+                      var onSuccess = function(response) {
+                        var errorDivs = document.getElementsByClassName("recaptcha-error");
+                        if (errorDivs.length) {
+                          errorDivs[0].className = "";
+                        }
+                        var errorMsgs = document.getElementsByClassName("recaptcha-error-message");
+                        if (errorMsgs.length) {
+                          errorMsgs[0].parentNode.removeChild(errorMsgs[0]);
+                        }
+                        };</script>
+			
 			<!-- InstanceEndEditable -->
 			<section class="tiles b-t-0">
       	<div class="tileText col-100 row-auto p-t-0">
